added translation with i18n

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,54 @@
     "eng": "Английский",
     "rus": "Русский",
     "rom": "Румынский",
-    "check-seo": "Проверка SEO",
-    "input-placeholder": "Введите адресс страницы"
-}
+  
+    "check-seo": "Проверить",
+    "input-placeholder": "Введите ссылку",
+  
+    "download-button-text": "Загрузить отчет",
+  
+    "check-seo-input-page": "Проверить SEO",
+    "input-page-title": "Анализ веб-страницы",
+    "input-page-subtitle": "Подробный анализ SEO веб-страницы",
+  
+    "seo-score": "Оценка SEO",
+    "seo-score-desc": "Скорость вашей страницы составляет {{score}}% от оптимальной.",
+  
+    "website-preview": "Предпросмотр сайта",
+    "website-perview-desc": "Здесь последний предпросмотр, созданный",
+  
+    "seo-categories-title": "Анализ категорий SEO",
+    "payload-optimization": "Оптимизация нагрузки",
+    "js-bootup": "Загрузка JS",
+    "desktop": "ПК версия",
+    "mobile": "Моб. версия",
+    "interactive": "Интерактив",
+  
+    "performance-metrix": "Метрики производительности",
+  
+    "web-vitals": "Основные показатели веб-сайта",
+    "web-vitals-desc-title": "Ключевые аспекты метрик производительности веб-сайта",
+    "web-vitals-desc": "Эти данные, когда они объединяются, предоставляют глубокое понимание производительности вашего веб-сайта. Они помогают оценить, насколько быстро пользователи видят критический контент (LCP), время ответа сервера и стабильность макета страницы (CLS).",
+  
+    "loading": "загрузка",
+    "interactivity": "Интерактивность",
+    "visual-stability": "Визуальная стабильность",
+    "lcp": "Наибольший контентный показатель",
+    "srt": "Время ответа сервера",
+    "cls": "Кумулятивное смещение макета",
+    "si": "Индекс скорости",
+    "fcp": "Первая отрисовка контента",
+    "ti": "Время до интерактивности",
+    "tbt": "Общее время блокировки",
+  
+    "lcp-desc": "Наибольший контентный показатель отмечает момент, когда наибольший текст или изображение отображается.",
+    "cls-desc": "Кумулятивное смещение макета измеряет движение видимых элементов внутри видимой области.",
+    "si-desc": "Индекс скорости показывает, насколько быстро заполняются видимые содержимое страницы.",
+    "fcp-desc": "Первая отрисовка контента отмечает момент, когда на странице впервые отображается текст или изображение.",
+    "ti-desc": "Время до интерактивности - это время, необходимое для полной интерактивности страницы.",
+    "tbt-desc": "Сумма всех временных интервалов между Первой отрисовкой контента и Временем до интерактивности, когда продолжительность задачи превысила 50 мс, выраженная в миллисекундах.",
+  
+    "network-error": "Ошибка сети",
+    "link-error": "Ошибка ссылки"
+  }
+  
