--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,7 +16,7 @@
     "seo-score-desc": "Скорость вашей страницы составляет {{score}}% от оптимальной.",
   
     "website-preview": "Предпросмотр сайта",
-    "website-perview-desc": "Здесь последний предпросмотр, созданный",
+    "website-perview-desc": "Это последний предпросмотр, созданный",
   
     "seo-categories-title": "Анализ категорий SEO",
     "payload-optimization": "Оптимизация нагрузки",
@@ -31,7 +31,7 @@
     "web-vitals-desc-title": "Ключевые аспекты метрик производительности веб-сайта",
     "web-vitals-desc": "Эти данные, когда они объединяются, предоставляют глубокое понимание производительности вашего веб-сайта. Они помогают оценить, насколько быстро пользователи видят критический контент (LCP), время ответа сервера и стабильность макета страницы (CLS).",
   
-    "loading": "загрузка",
+    "loading": "Загрузка",
     "interactivity": "Интерактивность",
     "visual-stability": "Визуальная стабильность",
     "lcp": "Наибольший контентный показатель",
