--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,7 +8,7 @@
   
     "download-button-text": "Загрузить отчет",
   
-    "check-seo-input-page": "Проверить SEO",
+    "check-seo-input-page": "Начать",
     "input-page-title": "Анализ веб-страницы",
     "input-page-subtitle": "Подробный анализ SEO веб-страницы",
   
@@ -50,6 +50,7 @@
     "tbt-desc": "Сумма всех временных интервалов между Первой отрисовкой контента и Временем до интерактивности, когда продолжительность задачи превысила 50 мс, выраженная в миллисекундах.",
   
     "network-error": "Ошибка сети",
-    "link-error": "Ошибка ссылки"
+    "link-error": "Ошибка ссылки",
+    "captcha-error": "Капча не пройдена"
   }
   
