--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -50,5 +50,6 @@
     "tbt-desc": "Sum of all time periods between FCP and Time to Interactive, when task length exceeded 50ms, expressed in milliseconds.",
 
     "network-error": "Networt error",
-    "link-error": "Link error"
+    "link-error": "Link error",
+    "captcha-error": "Captcha verification failed"
 }
